--- a/src/bot_bringup/config/nav2_mppi_params.yaml
+++ b/src/bot_bringup/config/nav2_mppi_params.yaml
@@ -42,8 +42,8 @@ amcl:
     beam_skip_threshold: 0.3
     
     # Particle filter configuration - High capacity for exploration
-    max_particles: 5000
-    min_particles: 500
+    max_particles: 100
+    min_particles: 300
     pf_err: 0.05         # Slightly higher error allowance to keep particles spread until certain
     pf_z: 0.99
     resample_interval: 1 # Resample EVERY update for fast adaptation
@@ -107,7 +107,7 @@ controller_server:
       plugin: "nav2_mppi_controller::MPPIController"
       time_steps: 30
       model_dt: 0.05
-      batch_size: 3000
+      batch_size: 1500
       vx_std: 0.2
       vy_std: 0.2
       wz_std: 0.4
@@ -224,7 +224,7 @@ global_costmap:
       robot_radius: 0.16
       resolution: 0.02
       track_unknown_space: true
-      plugins: ["static_layer", "inflation_layer"]
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
@@ -232,20 +232,20 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 10.0
         inflation_radius: 0.8
-      # obstacle_layer:
-      #   plugin: "nav2_costmap_2d::ObstacleLayer"
-      #   enabled: True
-      #   observation_sources: scan
-      #   scan:
-      #     topic: /scan
-      #     max_obstacle_height: 2.0
-      #     clearing: True
-      #     marking: True
-      #     data_type: "LaserScan"
-      #     raytrace_max_range: 8.0
-      #     raytrace_min_range: 0.0
-      #     obstacle_max_range: 9.5
-      #     obstacle_min_range: 0.0
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        enabled: True
+        observation_sources: scan
+        scan:
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          raytrace_max_range: 8.0
+          raytrace_min_range: 0.0
+          obstacle_max_range: 9.5
+          obstacle_min_range: 0.0
 
 planner_server:
   ros__parameters:
